--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="label_field_username_login">User name</string>
     <string name="label_field_password_login">Password</string>
     <string name="label_title_login_page">Login</string>
+    <string name="loading">Loading...</string>
 </resources>
